@@ -294,54 +294,3 @@ void CScreenHandler::OnOptionActivation()
 		m_UI->UpdateOptionsScreen(m_OptionsList, m_CurrentOptionIterator);
 	}
 }
-
-#define SHOUTCAST_DB_REQUEST_STRING 	"http://www.shoutcast.com/sbin/xmllister.phtml?service=pspradio&no_compress=1"
-
-void CScreenHandler::DownloadSHOUTcastDB()
-{
-	CPSPSoundStream *connection = new CPSPSoundStream();
-	connection->SetURI(SHOUTCAST_DB_REQUEST_STRING);
-	connection->Open();
-
-	if (true == connection->IsOpen())
-	{
-		Log(LOG_LOWLEVEL, "DownloadSHOUTcastDB(): Connection open, downloading...");
-		FILE *fOut = fopen("SHOUTcast/db.xml", "w");
-		if (fOut)
-		{
-			int iRet = 0;
-			int iByteCnt = 0;
-			char *buffer = (char*)malloc(8192);
-			memset(buffer, 0, 8192);
-			for(;;)
-			{
-				iRet = recv(connection->GetSocketDescriptor(), buffer, 8192, 0);
-				if (0 == iRet)
-				{
-					connection->Close();
-					delete connection, connection = NULL;
-					fclose(fOut), fOut = NULL;
-					Log(LOG_LOWLEVEL, "DownloadSHOUTcastDB(): DB Retrieved. (%dbytes)", iByteCnt);
-					m_UI->DisplayMessage("DB Retrieved");
-					break;
-				}
-				if (iRet > 0)
-				{
-					iByteCnt+= iRet;
-					fwrite(buffer, iRet, 1, fOut);
-				}
-			}
-			free(buffer), buffer = NULL;
-		}
-		else
-		{
-			Log(LOG_ERROR, "DownloadSHOUTcastDB(): Error- Couldn't open file for write.");
-			m_UI->DisplayErrorMessage("Couldn't write file");
-		}
-	}
-	else
-	{
-		Log(LOG_ERROR, "DownloadSHOUTcastDB(): Error- Couldn't connect to SHOUTcast.");
-		m_UI->DisplayErrorMessage("Couldn't connect...");
-	}
-}
